--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "tilt-frontend",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
