--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
 
 # testing
 /coverage
@@ -11,7 +11,6 @@ node_modules
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
