--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
+    "google-auth-library": "^1.6.1",
+    "googleapis": "^32.0.0",
     "if-env": "^1.0.4",
     "moment": "^2.22.2",
     "mongoose": "^5.1.6",
