--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.1.6",
     "nodemon": "^1.17.5",
-    "sequelize": "^4.37.10"
+    "sequelize": "^4.37.10",
+    "socket.io": "^2.1.1"
   }
 }
