--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-youtube": "^7.6.0",
-    "socket.io-client": "^2.1.1",
-    "semantic-ui-react": "^0.81.2"
+    "semantic-ui-react": "^0.81.2",
+    "socket.io-client": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
