--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   "homepage": "https://github.com/SigmaVX/Tilt#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
+    "connect-mongo": "^2.0.1",
     "create-react-app": "^1.5.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "google-auth-library": "^1.6.1",
     "googleapis": "^32.0.0",
