--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-vis": "^1.10.1",
     "react-youtube": "^7.6.0",
     "semantic-ui-react": "^0.81.2",
     "socket.io-client": "^2.1.1"
