--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-vis": "^1.10.1",
     "react-youtube": "^7.6.0",
     "semantic-ui-react": "^0.81.2",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
