--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,7 @@
     "react-scripts": "1.1.4",
     "react-vis": "^1.10.1",
     "react-youtube": "^7.6.0",
-    "semantic-ui-react": "^0.81.2",
-    "socket.io-client": "^2.1.1",
-    "styled-components": "^3.3.3"
+    "socket.io-client": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
