--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
